adding FAST-HEP based approach

--- a/pyhf_from_xml.ipynb
+++ b/pyhf_from_xml.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "main_xml_path = \"TRExFitter/minimal_example/RooStats/minimal_example.xml\"\n",
     "parent_folder = \"TRExFitter/\"\n",
-    "json_path     = \"workspace.json\""
+    "json_path     = \"workspace_from_xml.json\""
    ]
   },
   {
