updating to current pyhf fit API

--- a/pyhf_from_xml.ipynb
+++ b/pyhf_from_xml.ipynb
@@ -17,7 +17,7 @@
     "import pyhf.readxml\n",
     "import json\n",
     "\n",
-    "pyhf.set_backend(pyhf.tensor.numpy_backend(),pyhf.optimize.minuit_optimizer())"
+    "pyhf.set_backend(\"numpy\", pyhf.optimize.minuit_optimizer(verbose=True))"
    ]
   },
   {
@@ -81,14 +81,8 @@
    "outputs": [],
    "source": [
     "workspace = pyhf.Workspace(spec)\n",
-    "pdf = workspace.model(measurement_name=None) # get default model if None\n",
-    "data = workspace.data(pdf, with_aux=True)\n",
-    "\n",
-    "minuit = pyhf.optimizer._make_minuit(pyhf.utils.loglambdav,\n",
-    "                                     data,\n",
-    "                                     pdf,\n",
-    "                                     pdf.config.suggested_init(),\n",
-    "                                     pdf.config.suggested_bounds())"
+    "model = workspace.model()\n",
+    "data = workspace.data(model)"
    ]
   },
   {
@@ -107,15 +101,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 57.5 ms, sys: 5.81 ms, total: 63.3 ms\n",
-      "Wall time: 58.7 ms\n"
+      "------------------------------------------------------------------\n",
+      "| FCN = 21.61                   |     Ncalls=212 (212 total)     |\n",
+      "| EDM = 0.000108 (Goal: 1E-05)  |            up = 1.0            |\n",
+      "------------------------------------------------------------------\n",
+      "|  Valid Min.   | Valid Param.  | Above EDM | Reached call limit |\n",
+      "------------------------------------------------------------------\n",
+      "|     True      |     True      |   False   |       False        |\n",
+      "------------------------------------------------------------------\n",
+      "| Hesse failed  |   Has cov.    | Accurate  | Pos. def. | Forced |\n",
+      "------------------------------------------------------------------\n",
+      "|     False     |     True      |   True    |   True    | False  |\n",
+      "------------------------------------------------------------------\n",
+      "CPU times: user 50.1 ms, sys: 4.53 ms, total: 54.6 ms\n",
+      "Wall time: 51.8 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "result = minuit.migrad()\n",
-    "#minuit.minos()"
+    "result = pyhf.infer.mle.fit(data, model, return_uncertainties=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### show the results"
    ]
   },
   {
@@ -127,73 +139,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lumi: 1.002 +/- 0.020\n",
-      "staterror_Signal_region[0]: 1.000 +/- 0.006\n",
-      "staterror_Signal_region[1]: 0.999 +/- 0.006\n",
-      "staterror_Signal_region[2]: 1.003 +/- 0.005\n",
-      "staterror_Signal_region[3]: 0.998 +/- 0.006\n",
-      "staterror_Signal_region[4]: 0.999 +/- 0.008\n",
-      "staterror_Signal_region[5]: 0.997 +/- 0.012\n",
-      "Luminosity: 0.001 +/- 0.974\n",
-      "Signal_norm: 1.186 +/- 0.037\n"
+      "lumi: 1.00210226827377 +/- 0.01929133949918138\n",
+      "staterror_Signal_region[bin_0]: 1.0003425715548206 +/- 0.005807817286532124\n",
+      "staterror_Signal_region[bin_1]: 0.9988215875033956 +/- 0.0056055039396046835\n",
+      "staterror_Signal_region[bin_2]: 1.0034524200724302 +/- 0.005095426443941953\n",
+      "staterror_Signal_region[bin_3]: 0.9975282708630174 +/- 0.006000955883891657\n",
+      "staterror_Signal_region[bin_4]: 0.9989829541808631 +/- 0.007892029640412968\n",
+      "staterror_Signal_region[bin_5]: 0.9973982717169335 +/- 0.011986329787382344\n",
+      "Luminosity: 0.00024602355778569063 +/- 0.9111326823379149\n",
+      "Signal_norm: 1.1863179067062717 +/- 0.03731826916514769\n"
      ]
     }
    ],
    "source": [
-    "# get the names of all parameters\n",
-    "# this code is from https://github.com/scikit-hep/pyhf/pull/653\n",
-    "labels = [\"{}[{}]\".format(k, i) if pdf.config.param_set(k).n_parameters > 1 else k\n",
-    "          for k in pdf.config.par_order\n",
-    "          for i in range(pdf.config.param_set(k).n_parameters)]\n",
+    "def get_parameter_names(model):\n",
+    "    labels = []\n",
+    "    for parname in model.config.par_order:\n",
+    "        for i_par in range(model.config.param_set(parname).n_parameters):\n",
+    "            labels.append(\n",
+    "                \"{}[bin_{}]\".format(parname, i_par)\n",
+    "                if model.config.param_set(parname).n_parameters > 1\n",
+    "                else parname\n",
+    "            )\n",
+    "    return labels\n",
     "\n",
-    "bestfit = pyhf.tensorlib.astensor([x[1] for x in minuit.values.items()])\n",
-    "errors = pyhf.tensorlib.astensor([x[1] for x in minuit.errors.items()])\n",
+    "bestfit = result[:, 0]\n",
+    "uncertainty = result[:, 1]\n",
+    "labels = get_parameter_names(model)\n",
     "\n",
-    "for i, l in enumerate(labels):\n",
-    "    print(f\"{l}: {bestfit[i]:.3f} +/- {errors[i]:.3f}\")"
+    "for i, label in enumerate(labels):\n",
+    "    print(f\"{label}: {bestfit[i]} +/- {uncertainty[i]}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### show the correlation matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-----------------------------------------------------------------------\n",
-      "|    |     p0     p1     p2     p3     p4     p5     p6     p7     p8 |\n",
-      "-----------------------------------------------------------------------\n",
-      "| p0 |  1.000 -0.181 -0.175 -0.023  0.034 -0.004 -0.040 -0.945 -0.234 |\n",
-      "| p1 | -0.181  1.000  0.323  0.043 -0.062  0.007  0.073 -0.008  0.432 |\n",
-      "| p2 | -0.175  0.323  1.000  0.056 -0.044  0.017  0.075 -0.007  0.398 |\n",
-      "| p3 | -0.023  0.043  0.056  1.000  0.240  0.155  0.068 -0.001 -0.256 |\n",
-      "| p4 |  0.034 -0.062 -0.044  0.240  1.000  0.173  0.052  0.001 -0.431 |\n",
-      "| p5 | -0.004  0.007  0.017  0.155  0.173  1.000  0.042 -0.000 -0.210 |\n",
-      "| p6 | -0.040  0.073  0.075  0.068  0.052  0.042  1.000 -0.002  0.013 |\n",
-      "| p7 | -0.945 -0.008 -0.007 -0.001  0.001 -0.000 -0.002  1.000 -0.010 |\n",
-      "| p8 | -0.234  0.432  0.398 -0.256 -0.431 -0.210  0.013 -0.010  1.000 |\n",
-      "-----------------------------------------------------------------------\n"
-     ]
-    }
-   ],
-   "source": [
-    "minuit.print_matrix()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "parameters 0 and 7 (`lumi` and `Luminosity`) are highly anti-correlated"
+    "The parameters `lumi` and `Luminosity` both show up here and are highly anti-correlated. While `lumi` is a built-in way that HistFactory provides for a luminosity uncertainty, TRExFitter does not make use of it. Instead, a more configurable normalization factor is manually implemented in the TRExFitter configuration. While the `lumi` parameter is set to constant in `minimal_example.xml` (via `<ParamSetting Const=\"True\">Lumi</ParamSetting>`), this information is not yet propagated automatically through `pyhf` to the minimizer. See also https://github.com/scikit-hep/pyhf/pull/846."
    ]
   }
  ],
